# SkyCodeOS

./: .agent.md  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  scos-mcp.cmd  start-skycode.bat  start-skycode.ps1
.github/: copilot-instructions.md
agents/: models.yaml  profiles.yaml
agents/coder-primary/core/: doctrine.yaml  heart.yaml  mind.yaml  soul.yaml
agents/grammars/: skycore.gbnf
api/: Cargo.toml
api/src/: auth.rs  error.rs  key.rs  lib.rs  server.rs  state.rs
api/src/routes/: capabilities.rs  chat.rs  diffs.rs  events.rs  health.rs  mod.rs  models.rs  tasks.rs
boundary-tests/: Cargo.toml
boundary-tests/src/: lib.rs
boundary-tests/tests/: core_boundary.rs
boundary-tests/tests/fixtures/: core_uses_agent.rs  core_uses_agent.stderr  core_uses_inference.rs  core_uses_inference.stderr  core_uses_orchestrator.rs  core_uses_orchestrator.stderr  core_uses_tools.rs  core_uses_tools.stderr
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: apply.rs  approve.rs  ask.rs  diff.rs  mcp.rs  mod.rs  model.rs  profile.rs  rollback.rs  scan.rs  selfcheck.rs  serve.rs
contracts/: Cargo.toml
contracts/src/: lib.rs  sky_capability.rs  sky_cursor.rs  sky_event.rs  sky_loop_guard.rs  sky_redact.rs  sky_task.rs
docs/: PLAN.md  ROADMAP.md  agent-definition.md  architecture.md  cli-reference.md  clients.md  dogfood-checklist.md  memory-system.md  model-runtime.md  protocol.md  schemas.md  tool-system.md
docs/Plans/: ChatgptPlan.md  ChatgptPlanV2.md  ClaudePlan.md  ClaudePlanMaster.md  ClaudePlanV2.md  DeepSeekPlan.md  DeepSeekPlanV2.md  GeminiPlan.md  GeminiPlanV2.md  GithubCopilotPlan.md
docs/inventory/: llama-cpp-webui.md
mcp/: Cargo.toml
mcp/src/: dispatch.rs  handler.rs  lib.rs  proto.rs  sse.rs  state.rs  stdio.rs  tools.rs
memory/migrations/: 0007_loop_guard.sql  0008_tasks.sql  0009_key_registry.sql  001_initial.sql  002_tuning_runs.sql  003_signing_keys.sql  004_diff_sets.sql  005_agent_test_command.sql
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/tests/: anti_regression_e2e.rs  context_benchmark.rs  failure_modes.rs  phase10_grammar.rs  phase10b_sampling.rs  phase10c_streaming.rs  phase10d_tools_smoke.rs  phase11_safety.rs  phase11_serve_spawn.rs  phase1_gate.rs  phase2_gate.rs  phase3_gate.rs  phase4_gate.rs  phase5_failure.rs  phase5_regression.rs  phase5_router.rs  phase6_append_only.rs  phase6_pillar2.rs  phase6_pillar3.rs  phase6_pillar4.rs  phase6_redteam.rs  phase7_api.rs  phase7_mcp.rs  phase8_contracts.rs  phase9_bridge.rs  phase_new_file_diff.rs  phase_schema_bridge.rs  phase_security_fixes.rs  router_gate.rs  skycore_boundary.rs
skycode-agent/: Cargo.toml
skycode-agent/src/: lib.rs
skycode-agent/src/agent/: identity.rs  intent.rs  mod.rs  profile.rs  state.rs
skycode-core/: Cargo.toml
skycode-core/src/: lib.rs
skycode-core/src/approval/: mod.rs  token.rs  validator.rs
skycode-core/src/db/: diff_sets.rs  events.rs  migrations.rs  mod.rs
skycode-core/src/skycore/: boundary.rs  mod.rs  request.rs  response.rs
skycode-graph/: Cargo.toml
skycode-graph/src/: lib.rs
skycode-graph/src/graph/: impact.rs  indexer.rs  mod.rs
skycode-inference/: Cargo.toml
skycode-inference/src/: lib.rs
skycode-inference/src/inference/: context.rs  loader.rs  mod.rs  registry.rs
skycode-memory/: Cargo.toml
skycode-memory/src/: lib.rs
skycode-memory/src/memory/: mod.rs  retrieval.rs  store.rs
skycode-orchestrator/: Cargo.toml
skycode-orchestrator/src/: lib.rs
skycode-orchestrator/src/orchestrator/: mod.rs  policy.rs  router.rs  task_loop.rs
skycode-tools/: Cargo.toml
skycode-tools/src/: lib.rs
skycode-tools/src/tools/: apply.rs  diff.rs  filesystem.rs  hardware.rs  mod.rs  process.rs  rollback.rs  verify.rs
