[package]
name = "skycode-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scos"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
ring = "0.17"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
skycode-orchestrator = { path = "../skycode-orchestrator" }
