[package]
name = "skycode-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "scos"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
ring = "0.17"
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
skycode-orchestrator = { path = "../skycode-orchestrator" }
skycode-tools = { path = "../skycode-tools" }
skycode-api = { path = "../api" }
skycode-mcp = { path = "../mcp" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
