[package]
name = "skycode-mcp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
skycode-core      = { path = "../skycode-core" }
skycode-tools     = { path = "../skycode-tools" }
skycode-inference = { path = "../skycode-inference" }
skycode-memory    = { path = "../skycode-memory" }
skycode-contracts = { path = "../contracts" }
axum              = { version = "0.8", features = ["macros"] }
tokio             = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
tower-http        = { version = "0.6", features = ["cors"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
thiserror         = "1"
uuid              = { version = "1", features = ["v4"] }
rusqlite          = { version = "0.31", features = ["bundled"] }
ring              = "0.17"
