[package]
name = "skycode-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
skycode-core = { path = "../skycode-core" }
skycode-agent = { path = "../skycode-agent" }
skycode-tools = { path = "../skycode-tools" }
skycode-memory = { path = "../skycode-memory" }
skycode-graph = { path = "../skycode-graph" }
skycode-inference = { path = "../skycode-inference" }
skycode-orchestrator = { path = "../skycode-orchestrator" }

[dev-dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
ring = "0.17"
serde_json = "1"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
