[package]
name = "skycode-runtime"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
skycode-core = { path = "../skycode-core" }
skycode-agent = { path = "../skycode-agent" }
skycode-tools = { path = "../skycode-tools" }
skycode-memory = { path = "../skycode-memory" }
skycode-graph = { path = "../skycode-graph" }
skycode-inference = { path = "../skycode-inference" }
skycode-orchestrator = { path = "../skycode-orchestrator" }

[dev-dependencies]
skycode-api = { path = "../api" }
skycode-mcp = { path = "../mcp" }
skycode-contracts = { path = "../contracts" }
skycode-cli = { path = "../cli" }
httpmock = "0.7"
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
ring = "0.17"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"

[[test]]
name = "anti_regression_e2e"
path = "tests/anti_regression_e2e.rs"

[[test]]
name = "phase10_grammar"
path = "tests/phase10_grammar.rs"

[[test]]
name = "phase10b_sampling"
path = "tests/phase10b_sampling.rs"

[[test]]
name = "phase10c_streaming"
path = "tests/phase10c_streaming.rs"

[[test]]
name = "phase10d_tools_smoke"
path = "tests/phase10d_tools_smoke.rs"

[[test]]
name = "phase11_safety"
path = "tests/phase11_safety.rs"

[[test]]
name = "phase11_serve_spawn"
path = "tests/phase11_serve_spawn.rs"
