[package]
name = "skycode-graph"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
skycode-core = { path = "../skycode-core" }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ring = "0.17"
walkdir = "2"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-python = "0.21"
