[package]
name = "skycode-inference"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
skycode-core = { path = "../skycode-core" }
skycode-tools = { path = "../skycode-tools" }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["blocking", "json"] }
