[package]
name = "skycode-orchestrator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
skycode-core = { path = "../skycode-core" }
skycode-tools = { path = "../skycode-tools" }
skycode-memory = { path = "../skycode-memory" }
skycode-graph = { path = "../skycode-graph" }
skycode-inference = { path = "../skycode-inference" }
skycode-agent = { path = "../skycode-agent" }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
serde_json = "1"
diffy = "0.3"
