[package]
name = "skycode-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
skycode-core = { path = "../skycode-core" }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
quick-xml = { version = "0.31", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Dxgi"] }
